# lancedb-scaling-bench

./: .gitignore  Dockerfile  KNOWLEDGE_BASE.md  README.md  docker-compose.yml  requirements.txt  run_all.sh  run_cadence_local.sh  run_cadence_s3.sh  run_ec2.sh
bench/: bench_2gb_column.py  bench_compaction_cadence.py  bench_concurrency.py  bench_optimize.py  bench_optimize_intervals.py  bench_parallel_ingest.py  bench_query_degradation.py  bench_read.py  bench_scaling.py  bench_timeseries.py  bench_write.py  common.py  plots.py  report.py
results/: INTERPRETATION.md  REPORT.md  cadence_ops.jsonl  cadence_seed.jsonl  cap2gb.json  compaction_cadence.json  compaction_heartbeat.jsonl  compaction_probe.jsonl  concurrency.json  ingest_events.jsonl  optimize.json  optintervals.json  parallel_ingest.json  query_cells.jsonl  query_degradation.json  read.json  run_meta.jsonl  scaling.json  sweep_events.jsonl  sweep_results.jsonl  timeseries.json  write.json
results/rust-knobs/: REPORT.md  knobs_results.jsonl  plot_knobs.py
rust-compaction-knobs/: Cargo.toml  Cross.toml  README.md  run_knobs.sh
rust-compaction-knobs/src/: main.rs
